[package]
name = "mojo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "mojo"
path = "src/main.rs"

[dependencies]
lexx = { git = "https://github.com/JeffThomas/lexx.git" }
clap = { version = "4.0.25", features = ["derive"] }